vdi-multi-nic/manifests/app-common/multi-nic-app-deploy.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: multi-nic-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: multi-nic-app
  template:
    metadata:
      labels:
        app: multi-nic-app
      #annotations:
      #  k8s.v1.cni.cncf.io/networks: weave-app
    spec:
      terminationGracePeriodSeconds: 2
      containers:
        - name: example
          command: ["/bin/ash", "-c", "trap : TERM INT; sleep infinity & wait"]
          image: alpine
